renombrar el generador de módulos a lynk-module-generator

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module-generator",
+  "name": "lynk-module-generator",
   "version": "1.0.0",
   "description": "",
   "type": "module",
