--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lynk-module-generator",
-  "version": "1.0.7",
-  "description": "",
+  "version": "1.0.8",
+  "description": "Generador de modulos para un microkernel",
   "type": "module",
   "main": "index.js",
   "scripts": {
