--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "lynk-module-generator",
-  "version": "1.1.3",
-  "description": "Generador de modulos para un microkernel",
+  "version": "1.1.4",
+  "description": "Generador de módulos para un microkernel",
   "type": "module",
   "main": "index.js",
+  "exports": {
+    ".": "./index.js"
+  },
+  "bin": {
+    "lynk-create-module": "./salida/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec tsx ./index.ts",
@@ -19,16 +25,15 @@
   ],
   "files": [
     "salida",
-    "package.json",
     "archivos_base",
     "vistas_base"
   ],
-  "bin": {
-    "lynk-create-module": "./salida/index.js"
-  },
   "author": "Leonel Toloza",
-  "license": "ISC",
+  "license": "MIT",
   "packageManager": "pnpm@10.5.2",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
     "@types/node": "^22.13.14",
     "nodemon": "^3.1.9",
